--- a/SlotGameView/ClientApp/tsconfig.json
+++ b/SlotGameView/ClientApp/tsconfig.json
@@ -5,7 +5,7 @@
     "outDir": "./dist/out-tsc",
     "sourceMap": true,
     "declaration": false,
-    "module": "es2015",
+    "module": "esnext",
     "moduleResolution": "node",
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
@@ -14,6 +14,7 @@
     "typeRoots": [
       "node_modules/@types"
     ],
+    // "types": ["node"],
     "lib": [
       "es2018",
       "dom"
