--- a/SlotGameView/ClientApp/package.json
+++ b/SlotGameView/ClientApp/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "~7.1.0",
     "@types/pixi.js": "^4.8.6",
     "core-js": "^2.5.4",
+    "pixi-extra-filters": "^1.1.4",
     "pixi-particles": "^3.1.0",
     "pixi.js": "^4.8.4",
     "rxjs": "~6.3.3",
@@ -28,7 +29,7 @@
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.11.0",
+    "@angular-devkit/build-angular": "^0.12.1",
     "@angular/cli": "~7.1.1",
     "@angular/compiler-cli": "~7.1.0",
     "@angular/language-service": "~7.1.0",
