--- a/SlotGameView/ClientApp/package.json
+++ b/SlotGameView/ClientApp/package.json
@@ -11,15 +11,17 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~7.1.0",
+    "@angular/animations": "^7.1.4",
+    "@angular/cdk": "^7.2.1",
     "@angular/common": "~7.1.0",
     "@angular/compiler": "~7.1.0",
     "@angular/core": "~7.1.0",
     "@angular/forms": "~7.1.0",
+    "@angular/material": "^7.2.1",
     "@angular/platform-browser": "~7.1.0",
     "@angular/platform-browser-dynamic": "~7.1.0",
     "@angular/router": "~7.1.0",
-    "@types/pixi.js": "^4.8.6",
+    "@types/angular-material": "^1.1.62",
     "core-js": "^2.5.4",
     "pixi-extra-filters": "^1.1.4",
     "pixi-particles": "^3.1.0",
@@ -36,6 +38,7 @@
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^8.10.39",
+    "@types/pixi.js": "^4.8.6",
     "codelyzer": "~4.5.0",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
