--- a/SlotGameView/ClientApp/package.json
+++ b/SlotGameView/ClientApp/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "~7.1.0",
     "@angular/router": "~7.1.0",
     "@types/angular-material": "^1.1.62",
+    "angular-material-icons": "^0.7.1",
     "core-js": "^2.5.4",
     "pixi-extra-filters": "^1.1.4",
     "pixi-particles": "^3.1.0",
